samples/_failures_safe/1761555574_0a5161_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bee4c677.c: In function ‘main’:
./samples/SAFE/__tmp_bee4c677.c:157:5: error: expected expression at end of input
  157 |     if (!matrix_read(&mat_b, "B"))
      |     ^~
./samples/SAFE/__tmp_bee4c677.c:157:5: error: expected declaration or statement at end of input
